@@ -262,6 +262,10 @@ Agent.prototype.addFilter = function (fn) {
   this.addErrorFilter(fn)
   this.addTransactionFilter(fn)
   this.addSpanFilter(fn)
+  // Note: This does *not* add to *metadata* filters, partly for backward
+  // compat -- the structure of metadata objects is quite different and could
+  // break existing filters -- and partly because that different structure
+  // means it makes less sense to re-use the same function to filter them.
 }
 
 Agent.prototype.addErrorFilter = function (fn) {
@@ -289,6 +293,24 @@ Agent.prototype.addSpanFilter = function (fn) {
   }
 
   this._spanFilters.push(fn)
+}
+
+Agent.prototype.addMetadataFilter = function (fn) {
+  if (typeof fn !== 'function') {
+    this.logger.error('Can\'t add filter of type %s', typeof fn)
+    return
+  } else if (!this._transport) {
+    this.logger.error('cannot add metadata filter to inactive or unconfigured agent (agent has no transport)')
+    return
+  } else if (typeof this._transport.addMetadataFilter !== 'function') {
+    // Graceful failure if unexpectedly using a too-old APM client.
+    this.logger.error('cannot add metadata filter: transport does not support addMetadataFilter')
+    return
+  }
+
+  // Metadata filters are handled by the APM client, where metadata is
+  // processed.
+  this._transport.addMetadataFilter(fn)
 }
 
 Agent.prototype.captureError = function (err, opts, cb) {
