@@ -279,6 +279,7 @@ class Config {
           globalLabels: maybePairsToObject(conf.globalLabels),
           hostname: conf.hostname,
           environment: conf.environment,
+          metadataFilters: agent._metadataFilters,
 
           // Sanitize conf
           truncateKeywordsAt: config.INTAKE_STRING_MAX_SIZE,
