@@ -118,6 +118,9 @@ agent.addTransactionFilter(filter3)
 agent.addSpanFilter(filter1)
 agent.addSpanFilter(filter2)
 agent.addSpanFilter(filter3)
+agent.addMetadataFilter(filter1)
+agent.addMetadataFilter(filter2)
+agent.addMetadataFilter(filter3)
 
 agent.flush()
 agent.flush(() => {})
